# langidentify

./: .gitignore  NOTICE  README.md  pom.xml
core/: pom.xml
core/src/main/java/com/jlpka/langidentify/: AccentRemover.java  Alphabet.java  Detector.java  Language.java  Model.java  ModelLoader.java  NgramTable.java  Pair.java  WordSegmenter.java
core/src/test/java/com/jlpka/langidentify/: AccentRemoverTest.java  DetectorTest.java  NgramTableTest.java  WordSegmenterTest.java
models-full/: pom.xml
models-full/src/main/java/com/jlpka/langidentify/models/full/: FullModelInfo.java  package-info.java
models-full/src/main/resources/com/jlpka/langidentify/models/full/: skipwords.txt
models-lite/: pom.xml
models-lite/src/main/java/com/jlpka/langidentify/models/lite/: LiteModelInfo.java  package-info.java
models-lite/src/main/resources/com/jlpka/langidentify/models/lite/: MODEL_CARD.md  skipwords.txt
python/: Makefile  README.md
python/core/: .gitignore  Makefile  README.md  pyproject.toml
python/core/src/langidentify/: __init__.py  accent_remover.py  alphabet.py  detector.py  language.py  model.py  model_loader.py  word_segmenter.py
python/core/tests/: test_alphabet.py  test_detector.py  test_installed.py
python/eval/: README.md  adhoc.py  detection_speed.py  model_load_speed.py  phrase_eval.py
python/full-model/: .gitignore  Makefile  README.md  pyproject.toml
python/full-model/src/langidentify_full_model/: __init__.py
rust/eval/: Cargo.toml
rust/eval/src/: adhoc.rs  common.rs  detection_speed.rs  lib.rs  model_load_speed.rs  phrase_eval.rs  useffi.c
rust/example/: Cargo.toml
rust/example/src/: main.rs
rust/langidentify/: Cargo.toml  README.md
rust/langidentify/langidentify/: Cargo.toml
rust/langidentify/langidentify-ffi/: Cargo.toml  README.md
rust/langidentify/langidentify-ffi/include/: langidentify.h
rust/langidentify/langidentify-ffi/src/: lib.rs
rust/langidentify/langidentify-models/: README.md
rust/langidentify/langidentify-models-full/: Cargo.toml  build.rs
rust/langidentify/langidentify-models-lite/: Cargo.toml  build.rs
rust/langidentify/langidentify-models-lite/src/: lib.rs
rust/langidentify/langidentify-models/full/: Cargo.toml  build.rs
rust/langidentify/langidentify-models/full/src/: lib.rs
rust/langidentify/langidentify-models/lite/: Cargo.toml
rust/langidentify/langidentify-models/lite-a/: Cargo.toml  build.rs
rust/langidentify/langidentify-models/lite-a/src/: lib.rs
rust/langidentify/langidentify-models/lite-b/: Cargo.toml  build.rs
rust/langidentify/langidentify-models/lite-b/src/: lib.rs
rust/langidentify/langidentify-models/lite/src/: lib.rs
rust/langidentify/langidentify/src/: accent_remover.rs  alphabet.rs  detector.rs  language.rs  lib.rs  model.rs  model_loader.rs  ngram_table.rs  word_segmenter.rs
rust/langidentify/langidentify/tests/: accent_remover_test.rs  detector_test.rs  word_segmenter_test.rs
rust/langidentify/scripts/: copy_model_data.sh  publish.sh
scripts/: calcngrams.py  runwikieval.py
tools/: pom.xml
tools/src/main/java/com/jlpka/langidentify/tools/: ContentUtils.java  EvalTool.java  ModelBuilder.java
tools/src/test/java/com/jlpka/langidentify/tools/: ContentUtilsTest.java
