[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langidentify"
version = "1.0.1"
description = "Fast, high-accuracy language detection for Python. Uses ngram classification augmented with a topwords signal for improved short-text accuracy. Supports 80+ languages."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.9"
authors = [
    {name = "Jeremy Lilley", email = "jeremy@jlilley.net"},
]
keywords = ["language-detection", "nlp", "ngram", "text-classification"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "cjclassifier>=1.0.3",
]

[project.optional-dependencies]
full = [
    "langidentify-full-model>=1.0.0",
]
dev = [
    "pytest>=7.0",
]

[project.urls]
Homepage = "https://github.com/jlpka/langidentify"
Repository = "https://github.com/jlpka/langidentify"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"langidentify.models.lite" = ["*.txt.gz", "*.txt"]
"langidentify.models.full" = ["*.txt.gz", "*.txt"]
