[package]
name = "langidentify"
version = "0.1.0"
edition = "2021"
description = "Fast, high-accuracy language detection for Rust. Uses ngram classification augmented with a topwords signal for improved short-text accuracy. Supports 80+ languages."
license = "Apache-2.0"
authors = ["Jeremy Lilley <jeremy@jlilley.net>"]
repository = "https://github.com/jlpka/langidentify"
homepage = "https://github.com/jlpka/langidentify"
readme = "../README.md"
keywords = ["language-detection", "nlp", "ngram", "text-classification"]
categories = ["text-processing", "internationalization"]

[features]
default = []
lite = ["dep:langidentify-models-lite"]
# The "full" feature is only available via git or path dependency (the full model
# is ~89 MB and cannot be published to crates.io). To publish to crates.io,
# temporarily comment out the "full" feature and the langidentify-models-full
# dependency below, then restore after publishing. See README for details.
full = ["dep:langidentify-models-full"]

[dependencies]
flate2 = "1"
log = "0.4"
cjclassifier = "0.1.0"
langidentify-models-lite = { version = "0.1.0", path = "../langidentify-models/lite", optional = true }
langidentify-models-full = { path = "../langidentify-models/full", optional = true }

[dev-dependencies]
langidentify-models-lite = { version = "0.1.0", path = "../langidentify-models/lite" }
